# gmux_macos

./: .gitignore  BACKEND_CONNECTION.md  DECISIONS.md  DEPENDENCIES.md  DEPLOYMENT_TARGETS.md  HANDOVER.md  INSTALL_GUIDE.md  LICENSE  MACOS_AGENT_SETUP.md  README.md  RELATED_RESEARCH.md  START_HERE_ASHLEY.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  VERSION_CONTROL.md
agent-monitor/: README.md
agent-monitor/docs/: BACKEND_CONTRACT.md
agent-monitor/spec/: AGENT_MONITOR_SPEC.md
agent-monitor/src/dashboard/: index.html  serve.sh
agent-monitor/src/dashboard/js/: app.js  data.js  flow_layout.js  flow_pulses.js  subagents.js  (+1 more)
app/: .npmrc  package-lock.json  package.json  vite.config.js
app/src/: aquarium.html  index.html
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/examples/: agent_spawn_smoke.rs  pty_smoke.rs
app/src-tauri/src/: api.rs  lib.rs  main.rs
app/src-tauri/src/commands/: mod.rs  pairing.rs  terminal.rs  usage.rs
app/src-tauri/src/core/: error.rs  mod.rs  process_manager.rs  terminal_backend.rs  windows_process.rs
app/src/dashboard/: README.md  index.html
backend/: gmux.py  requirements.txt
backend/mcp/: README.md  gmux_mcp.py  test_mcp.py
backend/session/: session_restore.py
backend/status/: jump_red.py  memory_aggregator.py  monitor.py  pane_status.py  test_memory_aggregator.py  test_monitor_producers.py  test_sub_agents.py
backend/voice/: bridge.py  gmux_voice_daemon.py
docs/: AGENT_MONITOR_BACKEND.md  AGENT_MONITOR_DEBUG.md  AGENT_MONITOR_FIELDS.md  ALPHA22_FEATURES_AND_MARKETING.md  ALPHA22_SUMMARY_AND_TESTING.md  BRIDGE_DESIGN.md  EFFICIENT_DEPLOY.md  FRESH_VM_TEST_PLAN.md  GMUX_API.md  GMUX_PTYD_DESIGN.md  HANDOVER_FROM_V3_MEMORY_AGGREGATOR.md  HANDOVER_NEXT.md  HANDOVER_alpha15.md  HANDOVER_alpha16.md  INSTALL_REPORT_20260512.md  INTEGRATION.md  LIVE_DATA_STATUS.md  MACOS_PORTING.md  MACOS_RUNBOOK.md  MAESTRO_USAGE_COMPARISON.md  MEMORY_INTEGRATION.md  NEXT_ACTIONS.md  PROMPT_HISTORY.md  PROVIDER_AUTH_PLAN.md  RATE_LIMIT_DETECTION_DESIGN.md  ROADMAP_ALPHA17.md  ROADMAP_ALPHA18.md  ROLLBACK_alpha15_to_alpha14.md  RUNNING_FROM_GMUX_ONLY.md  SELF_LAUNCH_TEST.md  SUB_AGENT_SYSTEM.md  TAURI_APP_STATUS.md  TEST_REPORT_alpha4.md  USAGE_TRACKING.md  V4_BACKEND_DESIGN.md  V4_PTY_PLAN.md  V4_PTY_SWAP.md  V4_STATUS.md  VM_AGENT_COORDINATION.md  VM_DEPLOYMENT_LOG.md  (+1 more)
docs/VM_REPORTS/: 2026-05-13-host-handoff.md  2026-05-13-install-run-summary.md  2026-05-13-vm-tests.md  ACCESS_SETUP.md  FOR_ASHLEYS_CLAUDE.md  RESUME_NEXT_SESSION.md  macos-install-log.md
docs/legacy_planning/: AGENT_HANDOFF.md  AGENT_LIFECYCLE.md  ARCHITECTURE.md  CONTRIBUTING.md  FROM_MAESTRO.md  FROM_V3.md  OBJECTIVES.md  PHASES.md  TODO.md
docs/maestro_study/: 00_FINDINGS.md  01_ARCHITECTURE_DIFF.md  02_MIGRATION_PLAN.md
extras/avatar_system/: README.md  avatar-system.css  avatar-system.html  avatar-system.js  options-dropdown.html
scripts/: deploy.sh  gmux  install-vm.sh  launch-browser.sh  launch-gmux.sh  launch-v4.sh  launch-voice.sh  launch.sh  macos-bootstrap.sh  macos-keepalive.sh  macos-perf-cleanup.sh  macos-smoke-test.sh
state-review/: COMPOSITION_GAPS.md  DEPLOY_STATUS.md  MARKETING_LINES.md  README.md  STATE_OF_THE_STACK.md  WHAT_TO_SHIP.md
tooling/: README.md  iterm-dark-profile.json  wezterm.lua
tooling/ghostty/: INSTALL_FOR_CLAUDE.md
tooling/qalcode2/: INSTALL_FOR_CLAUDE.md  qalcode2
tooling/qalcode2/settings/: config.json  opencode.jsonc
tooling/qtk/: INSTALL_FOR_CLAUDE.md
tools/: seed_memory.py
ui/: gesture-engine.js  gesture-renderer.js  mock-data.js
ui/archive/: gmux-v3.1-2026-05-11.html
ui/releases/: gmux-v3.0.html
ui/v3/: index.html
(+6 files in other folders)
